--- a/index.html
+++ b/index.html
@@ -41,23 +41,25 @@
         </div>
         <div class="topic">
             <p>Topic</p>
-            <h2>&emsp; Migration flow of the U.S from 2018 to 2022</h2>
+            <h2>Migration flow of the U.S from 2018 to 2022</h2>
         </div>
-        <div>
-            <p>Team Name</p>
-            <h3>HuDu</h3>
+        <div id="homegrid">
+            <div class="home-grid-item i1" style="text-align: center;">
+                <p>Team Name</p>
+                <h3>HuDu</h3>
+            </div>
+            <div class="home-grid-item i2">
+                <p>s103842425</p>
+                <h3>&emsp; Tuan Hung Lo</h3>
+            </div>
+            <div class="home-grid-item i3">
+                <p>s104181721</p>
+                <h3>&emsp; Chi Duc Luong</h3>
+            </div>
         </div>
-        <div>
-            <p>s103842425</p>
-            <h3>Tuan Hung Lo</h3>
-        </div>
-        <div>
-            <p>s104181721</p>
-            <h3>Chi Duc Luong</h3>
-        </div>
-        <div>
+        <div class="project-description">
             <p>Project Description</p>
-            <h3>hehhehehehehehehehehehhehehehehe</h3>
+            <h3>&emsp; hehhehehehehehehehehehhehehehehe</h3>
         </div>
     </main>
     <footer>&#169; Copyright 2024 - Swinburne University of Technology - Semester 1 2024</footer>
