--- a/map.html
+++ b/map.html
@@ -35,7 +35,12 @@
         </ul>
     </nav>
     <main>
-
+        <p class="chart-description"><em>Text for charts descriptions. Please design like this format before I finish the description. Its length should be at least like thissssssssssssssssssssssssssssssss
+            sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+            sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+            sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss</em>
+        </p>
+        <div id="map"></div>
     </main>
     <footer>&#169; Copyright 2024 - Swinburne University of Technology - Semester 1 2024</footer>
 </body>
