update bar chart #1

--- a/code/index.html
+++ b/code/index.html
@@ -21,22 +21,22 @@
                 <h1>US Immigration</h1>
             </li>
             <li class="navOpt">
-                <img src="images/linechartsmall.png" alt="linechart"><a href="linechart.html">Line Chart</a>
+                <img src="/images/linechartsmall.png" alt="linechart"><a href="linechart.html">Line Chart</a>
             </li>
             <li class="navOpt">
-                <img src="images/barchart.png" alt="barchart"><a href="barchart.html">Bar Chart</a>
+                <img src="/images/barchart.png" alt="barchart"><a href="barchart.html">Bar Chart</a>
             </li>
             <li class="navOpt">
-                <img src="images/map.png" alt="map"><a href="map.html">Map</a>
+                <img src="/images/map.png" alt="map"><a href="map.html">Map</a>
             </li>
             <li class="navOpt active">
-                <img src="images/home.png" alt="home"><a href="index.html">Home</a>
+                <img src="/images/home.png" alt="home"><a href="index.html">Home</a>
             </li>
         </ul>
     </nav>
     <main>
         <div class="homeTitle">
-            <h1><img src="images/uni.png" alt="unilogo"> Welcome to our visualisation page!</h1>
+            <h1><img src="/images/uni.png" alt="unilogo"> Welcome to our visualisation page!</h1>
         </div>
         <div class="topic">
             <p>Topic</p>
