--- a/code/linechart.html
+++ b/code/linechart.html
@@ -20,17 +20,17 @@
             <li id="navTitle">
                 <h1>US Immigration</h1>
             </li>
-            <li class="navOpt">
-                <img src="images/linechartsmall.png" alt="linechart"><a href="linechart.html">Line Chart</a>
-            </li>
             <li class="navOpt active">
-                <img src="images/barchart.png" alt="barchart"><a href="barchart.html">Bar Chart</a>
+                <img src="/images/linechartsmall.png" alt="linechart"><a href="linechart.html">Line Chart</a>
             </li>
             <li class="navOpt">
-                <img src="images/map.png" alt="map"><a href="map.html">Map</a>
+                <img src="/images/barchart.png" alt="barchart"><a href="barchart.html">Bar Chart</a>
             </li>
             <li class="navOpt">
-                <img src="images/home.png" alt="home"><a href="index.html">Home</a>
+                <img src="/images/map.png" alt="map"><a href="map.html">Map</a>
+            </li>
+            <li class="navOpt">
+                <img src="/images/home.png" alt="home"><a href="index.html">Home</a>
             </li>
         </ul>
     </nav>
@@ -40,8 +40,7 @@
             sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
             sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss</em>
         </p>
-        <div id="barchart"></div>
-        <div id="piechart"></div>
+        <div id="linechart"></div>
     </main>
     <footer>&#169; Copyright 2024 - Swinburne University of Technology - Semester 1 2024</footer>
 </body>
