--- a/code/map.html
+++ b/code/map.html
@@ -21,16 +21,16 @@
                 <h1>US Immigration</h1>
             </li>
             <li class="navOpt">
-                <img src="images/linechartsmall.png" alt="linechart"><a href="linechart.html">Line Chart</a>
+                <img src="/images/linechartsmall.png" alt="linechart"><a href="linechart.html">Line Chart</a>
             </li>
             <li class="navOpt">
-                <img src="images/barchart.png" alt="barchart"><a href="barchart.html">Bar Chart</a>
+                <img src="/images/barchart.png" alt="barchart"><a href="barchart.html">Bar Chart</a>
             </li>
             <li class="navOpt active">
-                <img src="images/map.png" alt="map"><a href="map.html">Map</a>
+                <img src="/images/map.png" alt="map"><a href="map.html">Map</a>
             </li>
             <li class="navOpt">
-                <img src="images/home.png" alt="home"><a href="index.html">Home</a>
+                <img src="/images/home.png" alt="home"><a href="index.html">Home</a>
             </li>
         </ul>
     </nav>
