--- a/code/linechart.html
+++ b/code/linechart.html
@@ -24,7 +24,7 @@
                 <img src="/images/linechartsmall.png" alt="linechart"><a href="linechart.html">Line Chart</a>
             </li>
             <li class="navOpt">
-                <img src="/images/barchart.png" alt="barchart"><a href="barchart.html">Bar Chart</a>
+                <img src="/images/barchart.png" alt="barchart"><a href="barchart.html">Tornado Chart</a>
             </li>
             <li class="navOpt">
                 <img src="/images/map.png" alt="map"><a href="map.html">Map</a>
