update bar chart #3

--- a/code/barchart.html
+++ b/code/barchart.html
@@ -69,8 +69,12 @@
                     <svg id="svgPie"></svg>
                 </div>
                 <div id="pie-chart-legend">
-                    <rect class="maleRect"></rect><p>Male</p>
-                    <p><rect class="femaleRect"> Female</p>
+                    <p>
+                        <rect class="maleRect">Male</rect>
+                    </p>
+                    <p>
+                        <rect class="femaleRect">Female</rect>
+                    </p>
                 </div>
             </div>
         </div>
