--- a/code/map.html
+++ b/code/map.html
@@ -24,7 +24,7 @@
                 <img src="/images/linechartsmall.png" alt="linechart"><a href="linechart.html">Line Chart</a>
             </li>
             <li class="navOpt">
-                <img src="/images/barchart.png" alt="barchart"><a href="barchart.html">Tornado Chart</a>
+                <img src="/images/tornadochart.png" alt="tornadochart"><a href="tornadochart.html">Tornado Chart</a>
             </li>
             <li class="navOpt active">
                 <img src="/images/map.png" alt="map"><a href="map.html">Map</a>
