--- a/code/tornadochart.html
+++ b/code/tornadochart.html
@@ -11,7 +11,7 @@
     <title>Tornado Chart</title>
 
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="barchart.js"></script>
+    <script src="tornadochart.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -25,7 +25,7 @@
                 <img src="/images/linechartsmall.png" alt="linechart"><a href="linechart.html">Line Chart</a>
             </li>
             <li class="navOpt active">
-                <img src="/images/barchart.png" alt="barchart"><a href="barchart.html">Tornado Chart</a>
+                <img src="/images/tornadochart.png" alt="tornadochart"><a href="tornadochart.html">Tornado Chart</a>
             </li>
             <li class="navOpt">
                 <img src="/images/map.png" alt="map"><a href="map.html">Map</a>
@@ -60,7 +60,7 @@
                     <svg id="svgFemale"></svg>
                 </div>
                 <div id="tornado-chart-legend">
-                    <p>hehe</p>
+                    <p></p>
                 </div>
             </div>
             <div id="full-pie-chart">
@@ -70,10 +70,6 @@
                 </div>
                 <div id="pie-chart-legend">
                     <p>
-                        <rect class="maleRect">Male</rect>
-                    </p>
-                    <p>
-                        <rect class="femaleRect">Female</rect>
                     </p>
                 </div>
             </div>
