--- a/code/map.html
+++ b/code/map.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,12 @@
     <meta name="author" content="Lo Tuan Hung, Luong Chi Duc">
 
     <title>Home Page</title>
-    
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="javascript.js"></script>
 
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="map.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <nav>
         <ul>
@@ -35,13 +36,25 @@
         </ul>
     </nav>
     <main>
-        <p class="chart-description"><em>Text for charts descriptions. Please design like this format before I finish the description. Its length should be at least like thissssssssssssssssssssssssssssssss
-            sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
-            sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
-            sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss</em>
+        <p class="chart-description"><em>Text for charts descriptions. Please design like this format before I finish
+                the description. Its length should be at least like thissssssssssssssssssssssssssssssss
+                sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+                sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+                sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss</em>
         </p>
-        <div id="map"></div>
+        <div class="map-container">
+            <div id="yearButtons">
+                <button class="year-button" onclick="updateData(2018)">2018</button>
+                <button class="year-button" onclick="updateData(2019)">2019</button>
+                <button class="year-button" onclick="updateData(2020)">2020</button>
+                <button class="year-button" onclick="updateData(2021)">2021</button>
+                <button class="year-button" onclick="updateData(2022)">2022</button>
+            </div>
+            <svg id="map"></svg>
+            <div class="legend"></div>
+        </div>
     </main>
     <footer>&#169; Copyright 2024 - Swinburne University of Technology - Semester 1 2024</footer>
 </body>
+
 </html>
