update bar chart #4

--- a/code/tornadochart.html
+++ b/code/tornadochart.html
@@ -37,11 +37,7 @@
     <main>
         <p class="chart-description">
             <em>
-                Text for charts descriptions. Please design like this format before I finish
-                the description. Its length should be at least like thissssssssssssssssssssssssssssssss
-                sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
-                sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
-                sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss
+
             </em>
         </p>
         <div id="yearButtons">
@@ -53,7 +49,7 @@
         </div>
         <div class="charts">
             <div id="full-tornado-chart">
-                <h3>Comparison of the total immigrants by gender in</h3>
+                <h3></h3>
                 <div id="tornado-chart">
                     <svg id="svgMale"></svg>
                     <svg id="svgFemale"></svg>
@@ -63,7 +59,7 @@
                 </div>
             </div>
             <div id="full-pie-chart">
-                <h3>% Grant Total of Male and Female</h3>
+                <h3>Total % of Male and Female</h3>
                 <div id="pie-chart">
                     <svg id="svgPie"></svg>
                 </div>
