--- a/ohno/heatmap.html
+++ b/ohno/heatmap.html
@@ -19,8 +19,19 @@
         <li id="navTitle">
           <h1>US Immigration</h1>
         </li>
+        <li class="navOpt">
+          <img src="./images/tornadochart.png" alt="tornadochart" /><a
+            href="tornadochart.html"
+            >Tornado Chart</a
+          >
+        </li>
         <li class="navOpt active">
-          <a href="visualisation.html">Visualisation</a>
+          <img src="./images/map.png" alt="map" /><a href="heatmap.html">Map</a>
+        </li>
+        <li class="navOpt">
+          <img src="./images/home.png" alt="home" /><a href="index.html"
+            >Home</a
+          >
         </li>
       </ul>
     </nav>
@@ -62,28 +73,9 @@
             </div>
           </div>
         </div>
-        <!-- Right Side -->
-        <div class="RightSide">
-          <!-- Pie chart -->
-          <div id="full-pie-chart">
-            <h2>Total % of Male and Female</h2>
-            <div id="pie-chart">
-              <svg id="svgPie"></svg>
-            </div>
-          </div>
-          <!-- Tornado chart -->
-          <div id="full-tornado-chart">
-            <h2></h2>
-            <div id="tornado-chart">
-                <svg id="svgMale"></svg>
-                <svg id="svgFemale"></svg>
-            </div>
-        </div>
-        </div>
       </div>
       <!-- <script src="./script/test.js"></script> -->
       <script src="./script/heatmap.js"></script>
-      <script src="./script/tornadochart.js"></script>
     </main>
     <footer>
       &#169; Copyright 2024 - Swinburne University of Technology - Semester 1
