--- a/ohno/index.html
+++ b/ohno/index.html
@@ -21,14 +21,25 @@
           <h1>US Immigration</h1>
         </li>
         <li class="navOpt">
-          <a href="visualisation.html">Visualisation</a>
+          <img src="./images/tornadochart.png" alt="tornadochart" /><a
+            href="tornadochart.html"
+            >Tornado Chart</a
+          >
+        </li>
+        <li class="navOpt">
+          <img src="./images/map.png" alt="map" /><a href="heatmap.html">Map</a>
+        </li>
+        <li class="navOpt active">
+          <img src="./images/home.png" alt="home" /><a href="index.html"
+            >Home</a
+          >
         </li>
       </ul>
     </nav>
     <main>
       <div class="homeTitle">
         <h1>
-          <img src="/images/uni.png" alt="unilogo" /> Welcome to our
+          <img src="./images/uni.png" alt="unilogo" /> Welcome to our
           visualisation page!
         </h1>
       </div>
