--- a/heatmap.html
+++ b/heatmap.html
@@ -47,7 +47,7 @@
         <!-- Left side Heat map -->
         <div class="LeftSide">
           <div class="mapTitle">
-            <h2>Heat Map</h2>
+            <h2>USA Overview</h2>
             <p>Scroll your mouse to zoom the map</p>
           </div>
           <div id="heatmap-container"></div>
