--- a/heatmap.html
+++ b/heatmap.html
@@ -1,72 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Define document metadata -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Data Visualisation - Final Project" />
+    <meta name="keywords" content="HTML, CSS, D3" />
+    <meta name="author" content="Lo Tuan Hung, Luong Chi Duc" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Data Visualisation - Final Project" />
-  <meta name="keywords" content="HTML, CSS, D3" />
-  <meta name="author" content="Lo Tuan Hung, Luong Chi Duc" />
+    <!-- Set the title of the page -->
+    <title>Visualisation Page</title>
 
-  <title>Visualisation Page</title>
+    <!-- Include D3.js library -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 
-  <script src="https://d3js.org/d3.v7.min.js"></script>
+    <!-- Link to external CSS stylesheet -->
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
 
-  <link rel="stylesheet" href="./style/style.css" />
-</head>
-
-<body>
-  <nav>
-    <ul>
-      <li id="navTitle">
-        <h1>US Immigration</h1>
-      </li>
-      <li class="navOpt">
-        <img src="./images/tornadochart.png" alt="tornadochart" /><a href="tornadochart.html">Tornado Chart</a>
-      </li>
-      <li class="navOpt active">
-        <img src="./images/map.png" alt="map" /><a href="heatmap.html">Map</a>
-      </li>
-      <li class="navOpt">
-        <img src="./images/home.png" alt="home" /><a href="index.html">Home</a>
-      </li>
-    </ul>
-  </nav>
-  <main>
-    <div>
-      <p class="chart-description">
-        <em>
-          The heat map would illustrate the state-specific immigration during the period of 5 years from 2018 to 2022.
-          The darker the color, the higher the number of immigrants.
-        </em>
-      </p>
-    </div>
-    <div class="visualisation">
-      <!-- Left side Heat map -->
-      <div class="LeftSide">
-        <div class="mapTitle">
-          <h2>USA Overview</h2>
-          <p>Scroll your mouse to zoom the map</p>
-        </div>
-        <div id="heatmap-container"></div>
-        <!-- This is the container for d3 creating the heat map -->
-        <!-- Filter by year: -->
-        <div class="filter">
-          <div>
-            <label for="year-slider">
-              Year: <span id="year-display"></span>
-            </label>
-            <input type="range" id="year-slider" min="2018" max="2022" value="2022" />
+  <body>
+    <!-- Navigation bar -->
+    <nav>
+      <ul>
+        <!-- Logo and title -->
+        <li id="navTitle">
+          <h1>US Immigration</h1>
+        </li>
+        <!-- Navigation options -->
+        <li class="navOpt">
+          <!-- Image and link to Tornado Chart page -->
+          <img src="./images/tornadochart.png" alt="tornadochart" /><a
+            href="tornadochart.html"
+            >Demographic</a
+          >
+        </li>
+        <li class="navOpt active">
+          <!-- Image and link to Map page (current page) -->
+          <img src="./images/map.png" alt="map" /><a href="heatmap.html">Overview</a>
+        </li>
+        <li class="navOpt">
+          <!-- Image and link to Home page -->
+          <img src="./images/home.png" alt="home" /><a href="index.html"
+            >Home</a
+          >
+        </li>
+      </ul>
+    </nav>
+    <!-- Main content area -->
+    <main>
+      <!-- Description of the heat map -->
+      <div>
+        <p class="chart-description">
+          <em>
+            The heat map would illustrate the state-specific immigration during
+            the period of 5 years from 2018 to 2022. The darker the color, the
+            higher the number of immigrants.
+          </em>
+        </p>
+      </div>
+      <!-- Container for the heat map visualization -->
+      <div class="visualisation">
+        <!-- Left side Heat map -->
+        <div class="LeftSide">
+          <!-- Title and instructions for the map -->
+          <div class="mapTitle">
+            <h2>USA Overview</h2>
+            <p>Scroll your mouse to zoom the map</p>
+          </div>
+          <!-- Container for the heat map -->
+          <div id="heatmap-container"></div>
+          <!-- Filter options -->
+          <!-- Filter by year: -->
+          <div class="filter">
+            <div>
+              <!-- Slider for selecting year -->
+              <label for="year-slider">
+                Year: <span id="year-display"></span>
+              </label>
+              <input
+                type="range"
+                id="year-slider"
+                min="2018"
+                max="2022"
+                value="2022"
+              />
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <script src="./script/heatmap.js"></script>
-  </main>
-  <footer>
-    &#169; Copyright 2024 - Swinburne University of Technology - Semester 1
-    2024
-  </footer>
-</body>
-
+      <!-- Include JavaScript file for heat map -->
+      <script src="./script/heatmap.js"></script>
+    </main>
+    <!-- Footer section -->
+    <footer>
+      <!-- Copyright information -->
+      &#169; Copyright 2024 - Swinburne University of Technology - Semester 1
+      2024
+    </footer>
+  </body>
 </html>
